--- a/learning/rag_for_proj1/easy_langchain_rag/synthetic_knowledge_base.json
+++ b/learning/rag_for_proj1/easy_langchain_rag/synthetic_knowledge_base.json
@@ -4,26 +4,26 @@
     "description": "Comprehensive synthetic dataset covering computer science and technology topics",
     "total_documents": 20,
     "categories": [
-      "DevOps",
-      "Quantum Computing",
-      "Computer Networks",
-      "Database Systems",
-      "Internet of Things",
-      "Machine Learning",
-      "Natural Language Processing",
-      "Web Development",
-      "Computer Science",
-      "Human-Computer Interaction",
-      "AR/VR",
+      "Blockchain",
       "Cloud Computing",
+      "Web Development",
       "Robotics",
       "Bioinformatics",
+      "Natural Language Processing",
       "Data Science",
-      "Mobile Development",
+      "AR/VR",
+      "Computer Networks",
+      "Database Systems",
       "Cybersecurity",
       "Artificial Intelligence",
-      "Blockchain",
-      "Computer Graphics"
+      "Quantum Computing",
+      "Computer Science",
+      "DevOps",
+      "Internet of Things",
+      "Mobile Development",
+      "Human-Computer Interaction",
+      "Computer Graphics",
+      "Machine Learning"
     ],
     "creation_date": "2024",
     "version": "1.0"
