--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ seaborn>=0.12.0
 
 # Machine Learning
 scikit-learn>=1.2.0
-xgboost>=1.7.0
+xgboost>=2.0.0
 joblib>=1.2.0
+optuna>=3.4.0  # For hyperparameter optimization
 
 # File handling
 openpyxl>=3.0.0  # Excel files
